load("//bazel:defs.bzl", "compatible_with_rp2")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "cmsis_test",
    testonly = True,
    srcs = ["cmsis_test.c"],
    target_compatible_with = compatible_with_rp2(),
    deps = [
        "//bazel/config:PICO_CMSIS_PATH",
        "//src/common/pico_stdlib",
    ],
)
