load("//bazel:defs.bzl", "compatible_with_rp2")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "hardware_irq_test",
    srcs = ["hardware_irq_test.c"],
    deps = [
        "//src/common/pico_stdlib:pico_stdlib",
        "//src/common/pico_time:pico_time",
        "//src/rp2_common/hardware_dma:hardware_dma",
        "//src/rp2_common/hardware_irq:hardware_irq",
        "//src/rp2_common/pico_platform:hardware_structs",
        "//test/pico_test:pico_test",
    ],
    target_compatible_with = compatible_with_rp2(),
    testonly = True,
)
