load("//bazel:defs.bzl", "compatible_with_rp2")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "pico_divider_test",
    srcs = ["pico_divider_test.c"],
    deps = [
        "//src/common/pico_divider:pico_divider",
        "//src/common/pico_stdlib:pico_stdlib",
    ] + select({
        "//bazel/constraint:host": [],
        "//conditions:default": [
            "//src/rp2_common/hardware_dma:hardware_dma",
            "//src/rp2_common/hardware_irq:hardware_irq",
            "//src/rp2_common/hardware_vreg:hardware_vreg",
        ],
    }),
    target_compatible_with = compatible_with_rp2(),
    testonly = True,
)

cc_binary(
    name = "pico_divider_nesting_test",
    srcs = ["pico_divider_nesting_test.c"],
    deps = [
        "//src/common/pico_divider:pico_divider",
        "//src/common/pico_stdlib:pico_stdlib",
    ] + select({
        "//bazel/constraint:host": [],
        "//conditions:default": [
            "//src/rp2_common/hardware_dma:hardware_dma",
            "//src/rp2_common/hardware_irq:hardware_irq",
            "//src/rp2_common/hardware_vreg:hardware_vreg",
        ],
    }),
    target_compatible_with = compatible_with_rp2(),
    testonly = True,
)
